--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,6 @@
                 <ul>
                     <li class="fragment">Very Small Size</li>
                     <li class="fragment">Easy to Understand <br>and Develop Applications</li>
-                    <li class="fragment">Simple Integration</li>
                     <li class="fragment">Detailed Documentation</li>
                     <li class="fragment">Flexibility</li>
                     <li class="fragment">Right to choose</li>
@@ -192,16 +191,6 @@
     }
 &lt;/script&gt;
                 </code></pre>
-            </section>
-            <section>
-                <h2>Simple Integration</h2>
-                <ul>
-                    <li class="fragment">tag script (Vue.js runtime)</li>
-                    <li class="fragment">webpack</li>
-                    <li class="fragment">web components</li>
-                    <li class="fragment">browserify</li>
-                    <li class="fragment">requirejs</li>
-                </ul>
             </section>
             <section data-background-color="#ffffff">
                 <h2>Detailed Documentation</h2>
@@ -332,6 +321,9 @@
                 <h2>Reactivity</h2>
                 <img src="static/images/reactivity.png" alt="">
             </section>
+        </section>
+        <section>
+          <h2>Basic Vue Code</h2>
         </section>
         <section>
             <section>
@@ -562,6 +554,9 @@ export default {
         <section data-background-color="#ffffff">
             <h2>Dev tools</h2>
             <img style="height: 70vh;" src="static/images/devtool.png" alt="">
+        </section>
+        <section>
+          <h1>Vue Storefront</h1>
         </section>
         <section>
             <h1>Thanks</h1>
